--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RockPaperScissors!</title>
 </head>
+<style>
+    .button{
+        gap: 10px;
+        padding: 10px;
+    }
+
+</style>
 <body>
     <script src="rps.js"></script>
 </body>
